0.4.15/_sources/api/napari.layers.Points.rst
napari.layers.Points
====================

.. currentmodule:: napari.layers

.. autoclass:: Points
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Points.add
   
   
      ~Points.as_layer_data_tuple
   
   
      ~Points.bind_key
   
   
      ~Points.block_update_properties
   
   
      ~Points.click_plane_from_click_data
   
   
      ~Points.create
   
   
      ~Points.data_to_world
   
   
      ~Points.get_ray_intersections
   
   
      ~Points.get_status
   
   
      ~Points.get_value
   
   
      ~Points.interaction_box
   
   
      ~Points.projected_distance_from_mouse_drag
   
   
      ~Points.refresh
   
   
      ~Points.refresh_colors
   
   
      ~Points.refresh_text
   
   
      ~Points.remove_selected
   
   
      ~Points.save
   
   
      ~Points.set_view_slice
   
   
      ~Points.to_mask
   
   
      ~Points.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Points.affine
      ~Points.blending
      ~Points.class_keymap
      ~Points.current_edge_color
      ~Points.current_edge_width
      ~Points.current_face_color
      ~Points.current_properties
      ~Points.current_size
      ~Points.cursor
      ~Points.cursor_size
      ~Points.data
      ~Points.edge_color
      ~Points.edge_color_cycle
      ~Points.edge_color_mode
      ~Points.edge_colormap
      ~Points.edge_contrast_limits
      ~Points.edge_width
      ~Points.edge_width_is_relative
      ~Points.editable
      ~Points.experimental_canvas_size_limits
      ~Points.experimental_clipping_planes
      ~Points.extent
      ~Points.face_color
      ~Points.face_color_cycle
      ~Points.face_color_mode
      ~Points.face_colormap
      ~Points.face_contrast_limits
      ~Points.feature_defaults
      ~Points.features
      ~Points.help
      ~Points.interactive
      ~Points.loaded
      ~Points.metadata
      ~Points.mode
      ~Points.n_dimensional
      ~Points.name
      ~Points.ndim
      ~Points.opacity
      ~Points.out_of_slice_display
      ~Points.properties
      ~Points.property_choices
      ~Points.rotate
      ~Points.scale
      ~Points.selected_data
      ~Points.shading
      ~Points.shear
      ~Points.shown
      ~Points.size
      ~Points.source
      ~Points.symbol
      ~Points.text
      ~Points.thumbnail
      ~Points.translate
      ~Points.translate_grid
      ~Points.visible
      
      
      
      
   
   

   .. rubric:: Details